# ORCA

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
agenticvlm/: __init__.py
agenticvlm/acceleration/: __init__.py  predict_vllm.py  vllm_llm.py  vllm_vlm.py
agenticvlm/agents/: __init__.py  base.py  debate_agents.py  internvl_agents.py  multi_turn.py  qwen_agents.py
agenticvlm/cli/: __init__.py  evaluate.py  predict.py  train.py
agenticvlm/data/: __init__.py  augmentation.py  dataset.py  label_definitions.py  preprocessing.py
agenticvlm/decoding/: __init__.py  turbo_dfs.py
agenticvlm/evaluation/: __init__.py  anls.py  evaluator.py
agenticvlm/models/: __init__.py  base.py  glm4v.py  internvl3.py  qwen25vl.py  qwen2_ocr.py  qwen3.py  router.py
agenticvlm/pipeline/: __init__.py  debate.py  orchestrator.py  pipeline.py  question_router.py
agenticvlm/prompts/: __init__.py  debate_prompts.py  router_prompts.py  specialist_prompts.py  thinker_prompts.py
agenticvlm/training/: __init__.py  router_trainer.py
agenticvlm/utils/: __init__.py  device.py  image_utils.py  logging_config.py  text_processing.py
config/: default.yaml
scripts/: evaluate.sh  predict.sh  train_router.sh
tests/: test_anls.py  test_data.py  test_router.py  test_text_processing.py
